kube/frontend-service/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-399, 404"
    appgw.ingress.kubernetes.io/health-probe-path: "/"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - ecom-dev-vd.duckdns.org
    secretName: ecommerce-tls-secret
  rules:
  - host: ecom-dev-vd.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-api-service
            port:
              number: 80
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-api-service
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-api-service
            port:
              number: 80
